--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest-environment-jsdom": "28.1.1",
     "msw": "0.42.0",
     "nodemon": "2.0.16",
+    "prettier": "^3.5.3",
     "string-replace-loader": "3.1.0",
     "style-loader": "3.3.1",
     "webpack": "5.73.0",
